HomePage: Changed footer element size

--- a/hello.html
+++ b/hello.html
@@ -97,15 +97,14 @@
       </div>
       </div>
       <footer>
-      <div class="container">
-        <div class="footer_child">
-        	<img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8c/Facebook_Home_logo_old.svg/1024px-Facebook_Home_logo_old.svg.png" width="23" height="23" class="footer_img" alt="Join our Facebook page! (267k)" onclick="location.href='http://www.facebook.com'"">
-        	<img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Twitter_bird_logo_2012.svg/944px-Twitter_bird_logo_2012.svg.png" width="23" height="23" class="footer_img" onclick="location.href='http://www.twitter.com'"">
-        	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Google_Plus_logo_2015.svg/2000px-Google_Plus_logo_2015.svg.png" width="23" height="23" class="footer_img" onclick="location.href='https://plus.google.com/'">
-        </div>
-        <div class="footer_child">© QBurst 2017. All Rights Reserved. Privacy & Cookies Policy</div>
-        
-        </a>
+        <div class="container">
+          <div class="footer_child">
+        	  <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8c/Facebook_Home_logo_old.svg/1024px-Facebook_Home_logo_old.svg.png" width="23" height="23" class="footer_img" alt="Join our Facebook page! (267k)" onclick="location.href='http://www.facebook.com'"">
+          	<img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Twitter_bird_logo_2012.svg/944px-Twitter_bird_logo_2012.svg.png" width="23" height="23" class="footer_img" onclick="location.href='http://www.twitter.com'"">
+          	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Google_Plus_logo_2015.svg/2000px-Google_Plus_logo_2015.svg.png" width="23" height="23" class="footer_img" onclick="location.href='https://plus.google.com/'">
+          </div>
+          <div class="footer_child" id="footer_cpyright">© QBurst 2017. All Rights Reserved. Privacy & Cookies Policy
+          </div>
         </div>
       </footer> 
       </div>
